--- a/calculator/calculator.css
+++ b/calculator/calculator.css
@@ -35,8 +35,8 @@ body{
 }
 
 .btn{
-	width: 23%;
-	height: 47px;
+	width: 24%;
+	height: 45px;
 	border: none;
 	border-radius: 50px;
 	outline: none;
@@ -47,8 +47,8 @@ body{
 .btnEqual{
 	width: 74%;
 	height: 45px;
-	border: none;
 	border-radius: 50px;
+	border: none;
 	outline: none;
 	margin-top: 3px;
 	background: whitesmoke;
@@ -68,3 +68,230 @@ body{
 	background: rgba(128, 128, 128, 0.1);
 }
 
+@media (max-width: 480px){
+	.btn{
+		width: 24%;
+	}
+}body{
+	overflow: hidden;
+	background: conic-gradient(from .5turn at bottom center, lightblue, white)
+}
+
+.container{
+	width: 95%;
+	height: 100vh;
+	margin: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.calculator{
+	width: 370px;
+	margin: auto;
+	border-radius: 4px;
+	background: #f2f2f2;
+	padding: 15px 15px 20px 20px;
+	box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
+
+}
+
+#userInput{
+	
+	box-sizing: border-box;
+	width: 98%;
+	padding: 40px 5px;
+	background: whitesmoke;
+	text-align: right;
+	direction: ltr;
+	outline: none;
+	border: none;
+}
+
+.btn{
+	width: 24%;
+	height: 45px;
+	border: none;
+	border-radius: 50px;
+	outline: none;
+	margin-top: 3px;
+	background: whitesmoke;
+}
+
+.btnEqual{
+	width: 74%;
+	height: 45px;
+	border-radius: 50px;
+	border: none;
+	outline: none;
+	margin-top: 3px;
+	background: whitesmoke;
+}
+
+.btnDelete{
+	width: 24%;
+	height: 45px;
+	border: none;
+	border-radius: 50px;
+	outline: none;
+	margin-top: 3px;
+	background: whitesmoke;
+}
+
+.btn:hover, .btnEqual:hover, .btnDelete:hover{
+	background: rgba(128, 128, 128, 0.1);
+}
+
+@media (max-width: 480px){
+	.btn{
+		width: 24%;
+	}
+}body{
+	overflow: hidden;
+	background: conic-gradient(from .5turn at bottom center, lightblue, white)
+}
+
+.container{
+	width: 95%;
+	height: 100vh;
+	margin: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.calculator{
+	width: 370px;
+	margin: auto;
+	border-radius: 4px;
+	background: #f2f2f2;
+	padding: 15px 15px 20px 20px;
+	box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
+
+}
+
+#userInput{
+	
+	box-sizing: border-box;
+	width: 98%;
+	padding: 40px 5px;
+	background: whitesmoke;
+	text-align: right;
+	direction: ltr;
+	outline: none;
+	border: none;
+}
+
+.btn{
+	width: 24%;
+	height: 45px;
+	border: none;
+	border-radius: 50px;
+	outline: none;
+	margin-top: 3px;
+	background: whitesmoke;
+}
+
+.btnEqual{
+	width: 74%;
+	height: 45px;
+	border-radius: 50px;
+	border: none;
+	outline: none;
+	margin-top: 3px;
+	background: whitesmoke;
+}
+
+.btnDelete{
+	width: 24%;
+	height: 45px;
+	border: none;
+	border-radius: 50px;
+	outline: none;
+	margin-top: 3px;
+	background: whitesmoke;
+}
+
+.btn:hover, .btnEqual:hover, .btnDelete:hover{
+	background: rgba(128, 128, 128, 0.1);
+}
+
+@media (max-width: 480px){
+	.btn{
+		width: 24%;
+	}
+}body{
+	overflow: hidden;
+	background: conic-gradient(from .5turn at bottom center, lightblue, white)
+}
+
+.container{
+	width: 95%;
+	height: 100vh;
+	margin: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.calculator{
+	width: 370px;
+	margin: auto;
+	border-radius: 4px;
+	background: #f2f2f2;
+	padding: 15px 15px 20px 20px;
+	box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
+
+}
+
+#userInput{
+	
+	box-sizing: border-box;
+	width: 98%;
+	padding: 40px 5px;
+	background: whitesmoke;
+	text-align: right;
+	direction: ltr;
+	outline: none;
+	border: none;
+}
+
+.btn{
+	width: 24%;
+	height: 45px;
+	border: none;
+	border-radius: 50px;
+	outline: none;
+	margin-top: 3px;
+	background: whitesmoke;
+}
+
+.btnEqual{
+	width: 74%;
+	height: 45px;
+	border-radius: 50px;
+	border: none;
+	outline: none;
+	margin-top: 3px;
+	background: whitesmoke;
+}
+
+.btnDelete{
+	width: 24%;
+	height: 45px;
+	border: none;
+	border-radius: 50px;
+	outline: none;
+	margin-top: 3px;
+	background: whitesmoke;
+}
+
+.btn:hover, .btnEqual:hover, .btnDelete:hover{
+	background: rgba(128, 128, 128, 0.1);
+}
+
+@media (max-width: 480px){
+	.btn{
+		width: 24%;
+	}
+}
