--- a/grocerylist/grocerylist.css
+++ b/grocerylist/grocerylist.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Gabarito:wght@500&family=Pixelify+Sans:wght@500&family=Poiret+One&display=swap');
+
 *{
 	padding: 0;
 	margin: 0;
 }
 
 body{
-	font-family: "Mumblers Demo";
+	font-family: 'Cedarville Cursive', cursive;;
 	background: orange;
 }
 
